scrollbar fix

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -50,9 +50,8 @@
     left: 0px;
     width: 220px;
     background-color: rgb(255, 255, 255);
-    border-left: 1px solid #000;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
+    box-shadow: inset 1px 0 0 0 #000000, inset -1px 0 0 0 #000000, inset 0 -1px 0 0 #000000;
+    padding-right: 10px;
   }
 
   &__list.active {
@@ -84,7 +83,7 @@
       width: 24px;
       height: 24px;
       background-color: #fff;
-      border: 1px solid #000;
+      box-shadow: inset 0 0 0 1px #000000;
       flex: 0 0 auto;
     }
 
@@ -97,12 +96,6 @@
     }
   }
 
-
-
-  // &__scroll-bars {
-  //   width: 220px;
-  //   height: 200px;
-  // }
 }
 
 .thumb-vertical {
